# promptLab

./: .editorconfig  .gitignore  LICENSE  README.md  docker-compose.yml  render.yaml  setup.sh
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  init_db.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: analytics.py  api_keys.py  chat.py  conversations.py  experiments.py  export.py  feedback.py  health.py  prompts.py  setup.py
backend/app/middleware/: __init__.py  auth.py  logging.py
backend/app/models/: __init__.py  conversation.py  experiment.py  feedback.py  message.py  prompt_version.py  user.py
backend/app/schemas/: __init__.py  chat.py  experiment.py  feedback.py  prompt.py
backend/app/services/: experiments.py  llm.py  rate_limiter.py  stream_limiter.py  token_counter.py
backend/tests/: __init__.py  test_auth.py  test_experiments.py  test_stream_limiter.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: analytics.ts  apiKeys.ts  chat.ts  config.ts  conversations.ts  experiments.ts  feedback.ts  prompts.ts
frontend/src/components/: Chat.tsx  ConfirmDialog.tsx  ConversationSidebar.tsx  FeedbackButtons.tsx  Message.tsx  MessageList.tsx
frontend/src/components/__tests__/: FeedbackButtons.test.tsx  (+1 more)
frontend/src/types/: index.ts
rust-token-counter/: Cargo.toml  Dockerfile  README.md
rust-token-counter/src/: main.rs
(+13 files in other folders)
